EMIdevelopment/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AcctSeedERP__Default_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Inventory_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox enables asset management for this product. With asset management an asset record is created when an inventory product is allocated to a sales order. The asset record is associated with the customer (account) and is used to track the product.</inlineHelpText>
        <label>Inventory Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Lead_Time__c</fullName>
        <label>Lead Time</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Manufacturing_Order_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Order Template</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Minimum_Order_Quantity__c</fullName>
        <label>Minimum Order Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Safety_Stock_Quantity__c</fullName>
        <label>Safety Stock Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Sales_Order_Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this field will exclude creating a Sales Order Line for any Opportunity Product associated with this Product when using the &quot;Create Sales Order&quot; button on an Opportunity.</inlineHelpText>
        <label>Sales Order Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Serialized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serialized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Type__c</fullName>
        <inlineHelpText>Denotes if the product is taxable or not when calculating taxes on billings and payables. Otherwise indicates the product is a tax rate to be used in calculation.</inlineHelpText>
        <label>Tax Type</label>
        <picklist>
            <picklistValues>
                <fullName>Taxable Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Exempt Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Expense_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Products (Expense GL Account)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Defaults the value on a billing line when the product is entered.</inlineHelpText>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Defaults the value on a billing line when the product is entered.</inlineHelpText>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Products (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Defaults the value on a billing line when the product is entered.</inlineHelpText>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Products (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Inventory_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Products (Inventory GL Account)</relationshipLabel>
        <relationshipName>Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Inventory_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether the product is a managed inventory product</description>
        <inlineHelpText>Denotes whether the product is a managed inventory product</inlineHelpText>
        <label>Inventory Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Inventory_Type__c</fullName>
        <label>Inventory Type</label>
        <picklist>
            <picklistValues>
                <fullName>Purchased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufactured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raw Material</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Revenue_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Defaults the revenue GL account on a billing record when product is entered into a billing line.</inlineHelpText>
        <label>Revenue GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Rate__c</fullName>
        <inlineHelpText>Tax rate used and assigned to a customer or vendor.</inlineHelpText>
        <label>Tax Rate</label>
        <precision>12</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Product Cost</description>
        <inlineHelpText>Enter Product Cost</inlineHelpText>
        <label>Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Detail_Family__c</fullName>
        <label>Product Detail Family</label>
        <picklist>
            <picklistValues>
                <fullName>Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scrap Value</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Part_Number__c</fullName>
        <label>Vendor Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Require_Expense_GL_Account</fullName>
        <active>true</active>
        <description>Require a Expense GL Account if the Inventory Product field is true or the Inventory Type field is Purchased</description>
        <errorConditionFormula>(TEXT(AcctSeed__Inventory_Type__c) = &quot;Purchased&quot; || AcctSeed__Inventory_Product__c) &amp;&amp;  ISBLANK(AcctSeed__Expense_GL_Account__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Expense_GL_Account__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Require_Inventory_GL_Account</fullName>
        <active>false</active>
        <description>Require an Inventory GL Account if the Inventory Product field is true or the Inventory Type field is Purchased</description>
        <errorConditionFormula>(TEXT(AcctSeed__Inventory_Type__c) = &quot;Purchased&quot; || AcctSeed__Inventory_Product__c) &amp;&amp;  ISBLANK(AcctSeed__Inventory_GL_Account__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Inventory_GL_Account__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Require_Inventory_Type</fullName>
        <active>true</active>
        <description>Require an inventory Type if the Inventory Product field is true</description>
        <errorConditionFormula>AcctSeed__Inventory_Product__c &amp;&amp;  ISBLANK(TEXT(AcctSeed__Inventory_Type__c))</errorConditionFormula>
        <errorDisplayField>AcctSeed__Inventory_Type__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Require_Revenue_GL_Account</fullName>
        <active>true</active>
        <description>Require a Revenue GL Account if the Inventory Product field is true or the Inventory Type field is Purchased</description>
        <errorConditionFormula>(TEXT(AcctSeed__Inventory_Type__c) = &quot;Purchased&quot; || AcctSeed__Inventory_Product__c) &amp;&amp;  ISBLANK(AcctSeed__Revenue_GL_Account__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Revenue_GL_Account__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Require_Unit_Cost</fullName>
        <active>true</active>
        <description>Require Unit Cost if the Inventory Product field is true or the Inventory Type field is Purchased</description>
        <errorConditionFormula>(TEXT(AcctSeed__Inventory_Type__c) = &quot;Purchased&quot; || AcctSeed__Inventory_Product__c) &amp;&amp;  ISBLANK(AcctSeed__Unit_Cost__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Unit_Cost__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>